; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_flagsobject.c_arrayflags_print.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_flagsobject.c_arrayflags_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@NPY_ARRAY_WARN_ON_WRITE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"  (with WARN_ON_WRITE=True)\00", align 1
@.str.2 = private unnamed_addr constant [73 x i8] c"  %s : %s\0A  %s : %s\0A  %s : %s\0A  %s : %s%s\0A  %s : %s\0A  %s : %s\0A  %s : %s\0A\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"C_CONTIGUOUS\00", align 1
@NPY_ARRAY_C_CONTIGUOUS = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [13 x i8] c"F_CONTIGUOUS\00", align 1
@NPY_ARRAY_F_CONTIGUOUS = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [8 x i8] c"OWNDATA\00", align 1
@NPY_ARRAY_OWNDATA = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [10 x i8] c"WRITEABLE\00", align 1
@NPY_ARRAY_WRITEABLE = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [8 x i8] c"ALIGNED\00", align 1
@NPY_ARRAY_ALIGNED = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [16 x i8] c"WRITEBACKIFCOPY\00", align 1
@NPY_ARRAY_WRITEBACKIFCOPY = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [13 x i8] c"UPDATEIFCOPY\00", align 1
@NPY_ARRAY_UPDATEIFCOPY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @arrayflags_print to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @arrayflags_print(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  store i32 %7, i32* %3, align 4
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @NPY_ARRAY_WARN_ON_WRITE, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8** %4, align 8
  br label %13

13:                                               ; preds = %12, %1
  %14 = load i32, i32* %3, align 4
  %15 = load i32, i32* @NPY_ARRAY_C_CONTIGUOUS, align 4
  %16 = call i32 @_torf_(i32 %14, i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* @NPY_ARRAY_F_CONTIGUOUS, align 4
  %19 = call i32 @_torf_(i32 %17, i32 %18)
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* @NPY_ARRAY_OWNDATA, align 4
  %22 = call i32 @_torf_(i32 %20, i32 %21)
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* @NPY_ARRAY_WRITEABLE, align 4
  %25 = call i32 @_torf_(i32 %23, i32 %24)
  %26 = load i8*, i8** %4, align 8
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* @NPY_ARRAY_ALIGNED, align 4
  %29 = call i32 @_torf_(i32 %27, i32 %28)
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* @NPY_ARRAY_WRITEBACKIFCOPY, align 4
  %32 = call i32 @_torf_(i32 %30, i32 %31)
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* @NPY_ARRAY_UPDATEIFCOPY, align 4
  %35 = call i32 @_torf_(i32 %33, i32 %34)
  %36 = call i32* @PyUString_FromFormat(i8* getelementptr inbounds ([73 x i8], [73 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32 %16, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i32 %19, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i32 %22, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.6, i64 0, i64 0), i32 %25, i8* %26, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0), i32 %29, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0), i32 %32, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.9, i64 0, i64 0), i32 %35)
  ret i32* %36
}

declare dso_local i32* @PyUString_FromFormat(i8*, i8*, i32, i8*, i32, i8*, i32, i8*, i32, i8*, i8*, i32, i8*, i32, i8*, i32) #1

declare dso_local i32 @_torf_(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
